<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2"/>

        <TextView
            android:id="@+id/tvDialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialog3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d3"/>

        <TextView
            android:id="@+id/tvDialog3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvD3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3"/>

        <TextView
            android:id="@+id/tvEx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEx3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialog4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d4"/>

        <TextView
            android:id="@+id/tvDialog4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvD4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialog5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d5"/>

        <TextView
            android:id="@+id/tvDialog5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvD5"/>

    </LinearLayout>

</LinearLayout>